; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavutil/extr_mem.c_fill32.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavutil/extr_mem.c_fill32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @fill32 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fill32(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32*, i32** %3, align 8
  %7 = getelementptr inbounds i32, i32* %6, i64 -4
  %8 = call i32 @AV_RN32(i32* %7)
  store i32 %8, i32* %5, align 4
  br label %9

9:                                                ; preds = %12, %2
  %10 = load i32, i32* %4, align 4
  %11 = icmp sge i32 %10, 4
  br i1 %11, label %12, label %20

12:                                               ; preds = %9
  %13 = load i32*, i32** %3, align 8
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @AV_WN32(i32* %13, i32 %14)
  %16 = load i32*, i32** %3, align 8
  %17 = getelementptr inbounds i32, i32* %16, i64 4
  store i32* %17, i32** %3, align 8
  %18 = load i32, i32* %4, align 4
  %19 = sub nsw i32 %18, 4
  store i32 %19, i32* %4, align 4
  br label %9

20:                                               ; preds = %9
  br label %21

21:                                               ; preds = %25, %20
  %22 = load i32, i32* %4, align 4
  %23 = add nsw i32 %22, -1
  store i32 %23, i32* %4, align 4
  %24 = icmp ne i32 %22, 0
  br i1 %24, label %25, label %32

25:                                               ; preds = %21
  %26 = load i32*, i32** %3, align 8
  %27 = getelementptr inbounds i32, i32* %26, i64 -4
  %28 = load i32, i32* %27, align 4
  %29 = load i32*, i32** %3, align 8
  store i32 %28, i32* %29, align 4
  %30 = load i32*, i32** %3, align 8
  %31 = getelementptr inbounds i32, i32* %30, i32 1
  store i32* %31, i32** %3, align 8
  br label %21

32:                                               ; preds = %21
  ret void
}

declare dso_local i32 @AV_RN32(i32*) #1

declare dso_local i32 @AV_WN32(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
